# workflomics-readthedocs

./: .gitignore  README.md  README.rst  pyproject.toml
.github/workflows/: build.yml
docs/source/: benchmarker.rst  conf.py  index.rst  web-interface.rst
docs/source/basics/: add-domain.rst  installation.rst  pubmetric.rst  pubmetric_api.rst  standards.rst
docs/source/dev/: standards.rst
docs/source/developer-guide/: domain-development.rst  pubmetric.rst  pubmetric_api.rst  standards.rst
docs/source/domain-expert-guide/: adding-tools.rst  domain-development.rst
docs/source/rational/: annotating-tools.rst  discussions.rst
docs/source/user-guide/: web-interface.rst
docs/source/workflomics-benchmarker/: adding-tools.rst  benchmarker-installation.rst  benchmarker-overview.rst  benchmarker-usage.rst  benchmarker.rst
